--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "base-token-factory",
+  "name": "base-token-creator---launch-erc20-tokens",
   "private": true,
   "version": "0.0.0",
   "type": "module",
