--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "ethers": "^6.15.0"
+    "ethers": "^6.15.0",
+    "path": "^0.12.7",
+    "vite": "^7.1.12",
+    "@vitejs/plugin-react": "^5.0.4",
+    "fs": "^0.0.1-security"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
