--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "react-dom": "^19.2.0",
     "ethers": "^6.15.0",
     "vite": "^7.1.12",
-    "@vitejs/plugin-react": "^5.0.4",
     "path": "^0.12.7",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "@vitejs/plugin-react": "^5.0.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
