--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "ethers": "^6.15.0",
+    "framer-motion": "^11.3.19",
     "vite": "^7.1.12",
     "path": "^0.12.7",
     "fs": "^0.0.1-security",
